--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"modern-normalize": "^1.1.0"
+		"modern-normalize": "^1.1.0",
+		"svelte-motion": "^0.11.5"
 	}
 }
