--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"daisyui": "^3.2.1"
+		
 	},
 	"type": "module",
 	"dependencies": {
 		"modern-normalize": "^1.1.0",
-		"svelte-motion": "^0.11.5"
+		"svelte-motion": "^0.11.5",
+		"iconify-icon": "^1.0.8"
+		
 	}
 }
