--- a/package.json
+++ b/package.json
@@ -13,25 +13,24 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.13",
+		"daisyui": "^3.2.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"daisyui": "^3.2.1"
-		
+		"typescript": "^5.0.0",
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"gsap": "^3.12.2",
+		"iconify-icon": "^1.0.8",
 		"modern-normalize": "^1.1.0",
-		"svelte-motion": "^0.11.5",
-		"iconify-icon": "^1.0.8"
-		
+		"svelte-motion": "^0.11.5"
 	}
 }
